--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anagrama CSJI - Turma da Tia Tati</title>
+    <title>Anagrama CSJI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -87,7 +87,7 @@
     </style>
 </head>
 <body>
-    <div id="currentClass">Turma da Tia Tati</div>
+    <div id="currentClass">Turminha da Tia Tati</div>
     <h1>ESCOLHA AS LETRAS DO SEU NOME</h1>
     <div id="container">
         <img id="studentImage" src="" alt="Aluno">
